[gd_scene load_steps=29 format=3 uid="uid://bk3bgljl4ox8h"]

[ext_resource type="Script" uid="uid://d0klmhrydubhb" path="res://scripts/game_manager.gd" id="1_xy3my"]
[ext_resource type="PackedScene" uid="uid://blbae5xp247m5" path="res://scenes/non_playable/Map.tscn" id="3_cxv17"]
[ext_resource type="Texture2D" uid="uid://bp4ut1tshuu0t" path="res://assets/sprites/Tutorial/skip.png" id="4_1npfk"]
[ext_resource type="Script" uid="uid://duyh6hdvgma2b" path="res://scripts/turn_count_label.gd" id="4_2gh7q"]
[ext_resource type="Script" uid="uid://cg2ylqvx868ee" path="res://scripts/speedup_indicator.gd" id="4_6nmf6"]
[ext_resource type="PackedScene" uid="uid://cb36gbar6tdv" path="res://scenes/non_playable/guard.tscn" id="4_18ig4"]
[ext_resource type="PackedScene" uid="uid://b44tvfhd3lcf1" path="res://scenes/non_playable/player.tscn" id="5_7s5hy"]
[ext_resource type="PackedScene" uid="uid://c60mal05vn06b" path="res://scenes/non_playable/EndScreen.tscn" id="6_6nmf6"]
[ext_resource type="Script" uid="uid://emtjvummxi6o" path="res://scripts/guard_mover.gd" id="6_xs4ih"]
[ext_resource type="Script" uid="uid://fve4ylqy7j1n" path="res://scripts/player_mover.gd" id="7_6ytau"]
[ext_resource type="Script" uid="uid://bq4rqp7ow711n" path="res://scripts/score_display.gd" id="7_icif4"]
[ext_resource type="AudioStream" uid="uid://bwiwh1ddpoigc" path="res://assets/sounds/game_over_jingle/game_over.ogg" id="8_2gh7q"]
[ext_resource type="Texture2D" uid="uid://cw5kpeeq2q0sv" path="res://assets/ui/post_its/check.png" id="8_6nmf6"]
[ext_resource type="Texture2D" uid="uid://caiv810gq1dvv" path="res://assets/newui/paper.jpg" id="8_iaegw"]
[ext_resource type="PackedScene" uid="uid://dsn1mnxuhm7jh" path="res://scenes/non_playable/GoalObject.tscn" id="8_vijgj"]
[ext_resource type="Script" uid="uid://cjqf4q1mwbr5e" path="res://scripts/place_walls.gd" id="9_pynjx"]
[ext_resource type="AudioStream" uid="uid://csb3t8vt3lf7x" path="res://assets/sounds/victory_jingle/victory.ogg" id="10_a5tct"]
[ext_resource type="Texture2D" uid="uid://cnjhuew5ssw74" path="res://assets/models/flippage/papertexture.jpg" id="11_21xg8"]
[ext_resource type="AudioStream" uid="uid://cb88ggjx4kabs" path="res://assets/music/main_theme.ogg" id="11_j40tv"]
[ext_resource type="PackedScene" uid="uid://dj8ocoeajpxud" path="res://scenes/non_playable/pause_menu.tscn" id="13_1npfk"]

[sub_resource type="LabelSettings" id="LabelSettings_lk0vr"]
font_size = 48

[sub_resource type="LabelSettings" id="LabelSettings_6nmf6"]

[sub_resource type="LabelSettings" id="LabelSettings_1npfk"]
font_size = 90

[sub_resource type="LabelSettings" id="LabelSettings_iaegw"]
font_size = 32
font_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_2gh7q"]
font_size = 54
font_color = Color(0.393086, 0.393086, 0.393085, 1)

[sub_resource type="LabelSettings" id="LabelSettings_a5tct"]
font_size = 24
font_color = Color(0, 0.410708, 0.818128, 1)

[sub_resource type="Environment" id="Environment_18ig4"]
background_color = Color(0.323074, 0.389237, 0.503971, 1)
ambient_light_source = 3
ambient_light_color = Color(0.759369, 0.831966, 0.865193, 1)
reflected_light_source = 1

[sub_resource type="GDScript" id="GDScript_21xg8"]
resource_name = "moveabitaround"
script/source = "extends Sprite3D


func _process(delta: float) -> void:
	self.rotate_z(0.01*delta)
"

[node name="Game" type="Node3D"]

[node name="GameManager" type="Node" parent="." node_paths=PackedStringArray("player", "goal", "caught", "incomplete", "win", "win_jingle", "lose_jingle", "music")]
script = ExtResource("1_xy3my")
player = NodePath("../Player")
goal = NodePath("../GoalObject")
caught = NodePath("../CaughtScreen")
incomplete = NodePath("../IncompleteScreen")
win = NodePath("../WinScreen")
win_jingle = NodePath("../WinJingle")
lose_jingle = NodePath("../LoseJingle")
music = NodePath("../MusicPlayer")

[node name="WinJingle" type="AudioStreamPlayer" parent="."]
stream = ExtResource("10_a5tct")
volume_db = -5.0
bus = &"Music"

[node name="LoseJingle" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_2gh7q")
volume_db = -5.0
bus = &"Music"

[node name="Turncount" type="Label" parent="."]
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 45.0
offset_top = -100.0
offset_right = -45.0
offset_bottom = -33.0
grow_horizontal = 2
grow_vertical = 0
text = "100"
label_settings = SubResource("LabelSettings_lk0vr")
vertical_alignment = 1
script = ExtResource("4_2gh7q")

[node name="SpeedupIndicator" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("4_6nmf6")

[node name="Label" type="Label" parent="SpeedupIndicator"]
layout_mode = 0
offset_left = 1788.0
offset_top = 83.0
offset_right = 1893.0
offset_bottom = 132.0
text = "Hold space to
replay faster"
label_settings = SubResource("LabelSettings_6nmf6")
horizontal_alignment = 1

[node name="Sprite2D" type="Sprite2D" parent="SpeedupIndicator/Label"]
position = Vector2(55, -40)
scale = Vector2(0.15, 0.15)
texture = ExtResource("4_1npfk")

[node name="CaughtScreen" parent="." instance=ExtResource("6_6nmf6")]
visible = false

[node name="IncompleteScreen" parent="." instance=ExtResource("6_6nmf6")]
visible = false

[node name="Label" parent="IncompleteScreen/UI" index="0"]
offset_top = 113.04
offset_bottom = 270.04
text = "Plan incomplete"
label_settings = SubResource("LabelSettings_1npfk")

[node name="WinScreen" parent="." instance=ExtResource("6_6nmf6")]
visible = false

[node name="Check" parent="WinScreen" index="1"]
texture = ExtResource("8_6nmf6")

[node name="Label" parent="WinScreen/UI" index="0"]
text = "You Win"

[node name="Fills" parent="WinScreen/UI/DefaultView/VBoxContainer/Continue/FancyButton" index="0"]
region_rect = Rect2(918.539, 921.904, 618.93, 242.19)

[node name="Lines" parent="WinScreen/UI/DefaultView/VBoxContainer/Continue/FancyButton" index="1"]
region_rect = Rect2(918.539, 921.904, 618.93, 242.19)

[node name="Score Component" type="Node2D" parent="WinScreen"]
z_index = -1
script = ExtResource("7_icif4")

[node name="PaperTexture" type="Sprite2D" parent="WinScreen/Score Component"]
position = Vector2(1628, 506)
texture = ExtResource("8_iaegw")
region_enabled = true
region_rect = Rect2(2078.51, 3047.55, 401.487, 459.449)

[node name="MovesTakenTitle" type="Label" parent="WinScreen/Score Component"]
offset_left = 1550.0
offset_top = 355.0
offset_right = 1735.0
offset_bottom = 400.0
text = "Moves taken"
label_settings = SubResource("LabelSettings_iaegw")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label" type="Label" parent="WinScreen/Score Component/MovesTakenTitle"]
layout_mode = 0
offset_left = 10.0
offset_top = 39.0
offset_right = 192.0
offset_bottom = 113.0
text = "100"
label_settings = SubResource("LabelSettings_2gh7q")
horizontal_alignment = 1
vertical_alignment = 1

[node name="PreviousBestTitle" type="Label" parent="WinScreen/Score Component"]
offset_left = 1550.0
offset_top = 480.0
offset_right = 1758.0
offset_bottom = 525.0
text = "Fastest heist"
label_settings = SubResource("LabelSettings_iaegw")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label" type="Label" parent="WinScreen/Score Component/PreviousBestTitle"]
layout_mode = 0
offset_left = 10.0
offset_top = 39.0
offset_right = 192.0
offset_bottom = 113.0
text = "100"
label_settings = SubResource("LabelSettings_2gh7q")
horizontal_alignment = 1
vertical_alignment = 1

[node name="NewBestHeist" type="Label" parent="WinScreen/Score Component"]
offset_left = 1456.0
offset_top = 610.0
offset_right = 1852.0
offset_bottom = 660.0
text = "New best heist!"
label_settings = SubResource("LabelSettings_a5tct")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Check2" type="Sprite2D" parent="WinScreen"]
position = Vector2(978, 468)
scale = Vector2(0.532, 0.532)
texture = ExtResource("8_6nmf6")

[node name="PauseMenu" parent="." instance=ExtResource("13_1npfk")]

[node name="Map" parent="." instance=ExtResource("3_cxv17")]
transform = Transform3D(5, 0, 0, 0, 5, 0, 0, 0, 5, -16.5, 1.5, -19.5)

[node name="Player" parent="." instance=ExtResource("5_7s5hy")]
play_hop_sound = true
id = 10

[node name="Camera3D" type="Camera3D" parent="Player"]
transform = Transform3D(0.707107, -0.612373, 0.353553, 0, 0.5, 0.866026, -0.707107, -0.612373, 0.353553, 2.915, 7.2, 3)
environment = SubResource("Environment_18ig4")
projection = 1
size = 7.0

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="Player/Camera3D"]
transform = Transform3D(0.67718, -0.391692, -0.6229, 0.670888, -0.0190249, 0.741314, -0.302217, -0.9199, 0.249898, 0, 0, 0)

[node name="Sprite3D" type="Sprite3D" parent="Player/Camera3D"]
transform = Transform3D(0.85, 0, 0, 0, 0.85, 0, 0, 0, 0.85, 7.15256e-07, 1.19209e-07, -49.74)
modulate = Color(0.554693, 0.617583, 0.660369, 1)
texture = ExtResource("11_21xg8")
script = SubResource("GDScript_21xg8")

[node name="MovementManager" type="Node" parent="."]

[node name="GuardMovementController" type="Node" parent="MovementManager" node_paths=PackedStringArray("guard_list")]
script = ExtResource("6_xs4ih")
guard_list = [NodePath("../../Guards/mainCircleGuard"), NodePath("../../Guards/startingGumba"), NodePath("../../Guards/redfloorGuard"), NodePath("../../Guards/randompillarroomguard"), NodePath("../../Guards/theFinalBoss")]

[node name="PlayerMovementController" type="Node" parent="MovementManager" node_paths=PackedStringArray("player")]
script = ExtResource("7_6ytau")
player = NodePath("../../Player")

[node name="Guards" type="Node3D" parent="."]

[node name="mainCircleGuard" parent="Guards" instance=ExtResource("4_18ig4")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -20, 0, -7)
input_sequence = Array[int]([1, 1, 1, 2, 2, 1, 1, 1, 2, 2, 2, 2, 2, 2, 2, 2, 0, 0, 0, 3, 3, 3, 0, 0, 0, 0, 0, 0, 3, 3, 3, 3, 3, 0, 1, 3, 1, 1, 3, 1])
id = 1

[node name="redfloorGuard" parent="Guards" instance=ExtResource("4_18ig4")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -24, 0, -6)
input_sequence = Array[int]([3, 3, 1, 2, 0, 2, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 3, 0, 2, 2, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 3])
id = 2

[node name="randompillarroomguard" parent="Guards" instance=ExtResource("4_18ig4")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -6, 0, -21)
input_sequence = Array[int]([1, 1, 1, 1, 1, 2, 2, 2, 2, 1, 1, 2, 2, 0, 0, 0, 0, 0, 0, 3, 3, 0, 0, 3, 3, 3, 3, 1])
id = 3

[node name="theFinalBoss" parent="Guards" instance=ExtResource("4_18ig4")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -12, 0, -23)
input_sequence = Array[int]([3, 3, 3, 1, 3, 3, 0, 3, 3, 3, 1, 1, 2, 1, 1, 1, 1, 2, 2, 2, 2, 2, 2, 2, 2, 0, 0, 0, 2, 2, 0, 0, 0, 3, 3, 3])
id = 4

[node name="startingGumba" parent="Guards" instance=ExtResource("4_18ig4")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -7, 0, -2)
input_sequence = Array[int]([2, 2, 2, 2, 0, 2, 2, 2, 0, 0, 0, 0, 2, 2, 0, 0, 3, 3, 3, 2, 0, 0, 2, 2, 1, 1, 3, 3, 0, 0, 0, 0, 3, 3, 3, 0, 3, 3, 3, 1, 1, 3, 3, 3, 1, 1, 1, 2, 1, 1, 1, 3, 1, 1, 1, 1, 2, 2])
id = 5

[node name="GoalObject" parent="." instance=ExtResource("8_vijgj")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -26, 0, -22)

[node name="Walls" type="Node3D" parent="."]
visible = false
script = ExtResource("9_pynjx")

[node name="MusicPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("11_j40tv")
volume_db = -7.0
autoplay = true
bus = &"Music"

[connection signal="request_data" from="GameManager" to="MovementManager/PlayerMovementController" method="_on_game_manager_request_data"]
[connection signal="won" from="GameManager" to="MovementManager/PlayerMovementController" method="_on_game_manager_won"]
[connection signal="button_pressed" from="CaughtScreen" to="GameManager" method="post_lose_precedure"]
[connection signal="button_pressed" from="IncompleteScreen" to="GameManager" method="post_lose_precedure"]
[connection signal="button_pressed" from="WinScreen" to="GameManager" method="_on_main_menu_button_pressed"]
[connection signal="back_pressed" from="PauseMenu" to="GameManager" method="toggle_pause"]
[connection signal="out_of_moves" from="MovementManager/PlayerMovementController" to="GameManager" method="_on_player_movement_controller_out_of_moves"]
[connection signal="scores_updated" from="MovementManager/PlayerMovementController" to="WinScreen/Score Component" method="_on_scores_updated"]
[connection signal="send_data" from="MovementManager/PlayerMovementController" to="GameManager" method="_on_player_movement_controller_send_data"]

[editable path="IncompleteScreen"]
[editable path="WinScreen"]
